crates/rome_formatter/tests/specs/prettier/js/ignore/ignore-2.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: ignore-2.js

---
# Input
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
      invalidProp="HelloWorld"
    >
      test
    </div>
  );
}

a = <div {.../* prettier-ignore */b}/>
a = <div {...b/* prettier-ignore */}/>
a = <div {.../* prettier-ignore */{}}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Output
```js
// #8736

function HelloWorld() {
  return (
    <div
      {...{} /*
      // @ts-ignore */ /* prettier-ignore */}
      invalidProp="HelloWorld"
    >
      test
    </div>
  );
}

a = <div {.../* prettier-ignore */b}/>
a = <div {...b/* prettier-ignore */}/>
a = <div {.../* prettier-ignore */{}}/>
a = <div {...{/* prettier-ignore */}}/>
a = <div {...{}/* prettier-ignore */}/>

```

# Errors
```
error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:5:5
   │  
 5 │ ┌     <div
 6 │ │       {...{} /*
 7 │ │       // @ts-ignore */ /* rome-ignore format: prettier ignore */}
 8 │ │       invalidProp="HelloWorld"
 9 │ │     >
10 │ │       test
11 │ │     </div>
   │ └──────────^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:15:5
   │
15 │ a = <div {.../* rome-ignore format: prettier ignore */b}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:16:5
   │
16 │ a = <div {...b/* rome-ignore format: prettier ignore */}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:17:5
   │
17 │ a = <div {.../* rome-ignore format: prettier ignore */{}}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:18:5
   │
18 │ a = <div {...{/* rome-ignore format: prettier ignore */}}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax

error[SyntaxError]: JSX elements are a JSX only feature. Convert your file to a JSX file or remove the syntax.
   ┌─ ignore-2.js:19:5
   │
19 │ a = <div {...{}/* rome-ignore format: prettier ignore */}/>
   │     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ JSX only syntax


```


